--- a/src/components/Recipe/Recipe.css
+++ b/src/components/Recipe/Recipe.css
@@ -4,12 +4,9 @@
     width: 90%;
     display: flex;
     flex-direction: row;
-    margin-bottom: 20px;
-    transition: background-color 1s;
+    margin-bottom: 30px;
     border-radius: 10px;
-}
-.Recipe:hover{
-    background-color: rgba(0, 0, 0, .2);
+
 }
 
 .Recipe img{
@@ -25,14 +22,33 @@
     flex-direction: column;
 }
 .Recipe span{
-    color: #7fff00;
+    color: rgba(0,189,0,1);
     font-size: 12px;
+}
+.Recipe .Info{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    height: 100%;
+
+}
+.Recipe .Info p{
+    color: black;
+    font-size: 14px;
+    margin: 5px;
+    margin-left: 0;
+    align-self: center;
 }
 
 .Recipe h1{
-    font-size: 20px;
+    font-size: 24px;
     padding-top: 5px;
     margin: 0;
+}
+.Recipe p{
+    margin: 0;
+    color: grey;
+    font-size: 12px;
 }
 @media (max-width: 375px ) {
     .Recipe img{
