--- a/src/components/Recipe/Recipe.css
+++ b/src/components/Recipe/Recipe.css
@@ -1,11 +1,45 @@
 .Recipe{
     padding-left: 10px;
     height: 190px;
+    /*max-height: 220px;*/
     width: 90%;
     display: flex;
     flex-direction: row;
-    margin-bottom: 30px;
-    border-radius: 10px;
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+    border-bottom: 1px grey dotted;
+}
+.Recipe i{
+    color: rgba(97,159,162, 1);
+}
+.Recipe .Arrow{
+    margin-bottom: 3px;
+    margin-left: 2px;
+    display: inline-block;
+    font-style: normal;
+    position: relative;
+    width: 0.3em;
+    height: 0.3em;
+    border-right: 0.1em solid black;
+    border-top: 0.1em solid black;
+    transform: rotate(135deg) ;
+    transition: transform .5s, margin-bottom .5s;
+
+}
+.Recipe .ArrowTop{
+    margin-bottom: 1px;
+    margin-left: 2px;
+    display: inline-block;
+    font-style: normal;
+    position: relative;
+    width: 0.3em;
+    height: 0.3em;
+    border-right: 0.1em solid black;
+    border-top: 0.1em solid black;
+    transform: rotate(-45deg);
+    transition: transform .5s, margin-bottom .5s;
+
+
 
 }
 
@@ -22,14 +56,16 @@
     flex-direction: column;
 }
 .Recipe span{
-    color: rgba(0,189,0,1);
+    color: rgba(97,159,162, 1);
     font-size: 12px;
 }
 .Recipe .Info{
     display: flex;
+    align-items: flex-start;
     justify-content: space-between;
     flex-wrap: wrap;
     height: 100%;
+    margin-top: 10px;
 
 }
 .Recipe .Info p{
@@ -37,7 +73,10 @@
     font-size: 14px;
     margin: 5px;
     margin-left: 0;
-    align-self: center;
+    /*align-self: center;*/
+}
+.Recipe .Info span{
+    color: black;
 }
 
 .Recipe h1{
@@ -51,6 +90,9 @@
     font-size: 12px;
 }
 @media (max-width: 375px ) {
-    .Recipe img{
+    .Recipe h1{
+        font-size: 20px;
+        padding-top: 2px;
+        margin-top: 0;
     }
 }
